--- a/potdotbid-backend/package.json
+++ b/potdotbid-backend/package.json
@@ -14,10 +14,12 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^5.7.2",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "rimraf": "^5.0.6",
     "tsc-watch": "^6.2.0"
