--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -10,6 +10,7 @@
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "abdk-libraries-solidity": "^3.2.0",
+    "dotenv": "^16.4.7",
     "v2-core": "^0.0.1-security"
   },
   "scripts": {
